--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -55,6 +55,7 @@ header{
             width:150px;
             height: 25px;
         }
+        .btn-div{margin-top: 0px;}
     }
     
 }
@@ -100,11 +101,10 @@ header{
     
 }
 
-// chemi lapptop aris 1600
 @media screen and (min-width:1400px) {
     header{
         background-color: rgb(0, 255, 136);
-       padding: 15px 120px;
+       padding: 10px 220px;
     
     }
     
