--- a/src/app/new-employee/new-employee.component.scss
+++ b/src/app/new-employee/new-employee.component.scss
@@ -2,20 +2,22 @@
 .overlay {
   z-index: 2;
     position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
+    height: 100vh;
+    inset: 0;
     background-color: rgba(0, 0, 0, 0.5); 
     backdrop-filter: blur(2px); 
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: start;
     overflow-y: auto;
+    padding-top: 100px;
+    padding-bottom: 100px;
     .modal {
     background-color: #fff;
     width: 400px;
     max-width: 90%;
+    max-height: 90vh;
+    overflow-y: auto;
     border-radius: 8px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
     display: flex;
