--- a/src/styles.scss
+++ b/src/styles.scss
@@ -24,7 +24,35 @@
     border: 1px solid #FA4D4D !important ;
 }    
 
+.loader-div{
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+ flex-direction: column;
+ gap:20px;
+ p{
+  color: #8338EC;
+  font-size: 16px;
+ }
+}
 
-
+.error-div{
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+ 
+ gap:20px;
+ p{
+  color: #FB5607;
+  font-size: 16px;
+ }
+}
 
   
+
